# PythonSpeedEditor

./: CLAUDE.md  LICENSE  Plan native plugin  README.md  config.yaml  davinci-speed-editor.py  davinci_speed_editor.py  sdrpp_bridge.py
docs/: PLAN-sdrpp-speed-editor.md  speed_editor_guides.html
plugin/: CMakeLists.txt
plugin/src/: event_types.h  hid_device.cpp  hid_device.h  key_map.h  main.cpp
